--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   firebase_core: ^2.16.0
-
+  firebase_database: ^10.2.6
+  cloud_firestore: ^4.9.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
