--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   #cloud_firestore: ^4.9.2
   #firebase_auth: ^4.10.0
   intl: ^0.18.1
+  auth_buttons: ^3.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
