--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  fluttertoast: ^8.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -41,6 +41,7 @@ dependencies:
   #firebase_auth: ^4.10.0
   intl: ^0.18.1
   auth_buttons: ^3.0.2
+  firebase_auth: ^4.10.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
