--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   intl: ^0.18.1
   auth_buttons: ^3.0.2
   firebase_auth: ^4.10.1
+  flutter_form_builder: ^9.1.1
+  form_builder_validators: ^9.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
