--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   firebase_auth: ^4.10.1
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
+  cloud_firestore: ^4.9.3
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
