--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_form_builder: ^9.1.1
   form_builder_validators: ^9.1.0
   cloud_firestore: ^4.9.3
+  flutter_floating_bottom_bar: ^1.2.0
   
 dev_dependencies:
   flutter_test:
