--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   form_builder_validators: ^9.1.0
   cloud_firestore: ^4.9.3
   flutter_floating_bottom_bar: ^1.2.0
+  image_picker: ^1.0.4
+  multi_select_flutter: ^4.1.3
+  firebase_storage: ^11.2.8
   
 dev_dependencies:
   flutter_test:
