--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   image_picker: ^1.0.4
   multi_select_flutter: ^4.1.3
   firebase_storage: ^11.2.8
+  sn_progress_dialog: ^1.1.3
   
 dev_dependencies:
   flutter_test:
