--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   multi_select_flutter: ^4.1.3
   firebase_storage: ^11.2.8
   sn_progress_dialog: ^1.1.3
+  animated_splash_screen: ^1.3.0
   
 dev_dependencies:
   flutter_test:
